--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0px;
+  padding: 15px 0px;
 }
 .header-top a {
   text-decoration: none;
@@ -39,7 +39,7 @@
 }
 .header {
   width: 100%;
-  height: 709px;
+  height: 705px;
   background-image: url(Images/Headerimage.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -62,12 +62,14 @@
   width: 451px;
   padding: 18px 51px;
   font-size: 19px;
+  color: #5f778a;
 }
 .header-bottom-right {
   float: right;
   width: 381px;
   padding: 14px 93px;
   font-size: 19px;
+  color: #5f778a;
 }
 .panel {
   background-color: white;
@@ -75,6 +77,7 @@
 }
 .Tag-left {
   float: left;
+  color: #5f778a;
 }
 .box-div {
   border: 10px solid #edeff0;
@@ -153,10 +156,10 @@
 }
 .grid-container-1 {
   display: grid;
-  grid-template-columns: 288px 281px 290px 291px;
-  row-gap: 6px;
+  grid-template-columns: 294px 286px 294px 295px;
   color: #335269;
-  padding: 42px 0px;
+  padding: 43px 2px;
+  font-size: 20px;
 }
 /* section-6 */
 
@@ -182,6 +185,7 @@ th {
   padding: 8px 69px;
   background-color: #ffffff;
 }
+
 .table-1 th {
   color: #1f5fd3;
 }
