--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .cont {
   width: 1120px;
   margin: 0 auto;
@@ -7,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 0px;
+  padding: 15px 2px;
 }
 .header-top a {
   text-decoration: none;
@@ -18,29 +17,26 @@
 }
 .navbar ul {
   display: flex;
-  gap: 3%;
-  padding: 0;
-  padding-right: 49px;
+  gap: 9%;
 
   height: 45px;
   align-items: center;
-  justify-content: center;
+
   list-style: none;
-  margin: 0;
 }
 .navbar {
   background-color: #3f78e0;
-  width: 100%;
+  width: 110%;
+  margin: -17px -153px;
 }
 .navbar a {
-  border-right: 1px solid;
   color: white;
   padding: 0px 30px;
   text-decoration: none;
 }
 .header {
   width: 100%;
-  height: 705px;
+  height: 468px;
   background-image: url(Images/Headerimage.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -48,7 +44,7 @@
 }
 .Tag {
   padding: 20px 0;
-  width: 500px;
+  width: 535px;
   color: #1a2f4c;
 }
 /* section-2  */
@@ -56,25 +52,24 @@
 .header-bottom {
   background-color: white;
   height: 215px;
-  margin: 219px 0px;
+  margin: 53px 0px;
+  border-radius: 15px;
 }
 .header-bottom-left {
   float: left;
   width: 451px;
-  padding: 18px 51px;
-  font-size: 19px;
+  padding: 16px 69px;
   color: #5f778a;
 }
 .header-bottom-right {
   float: right;
   width: 381px;
-  padding: 14px 93px;
-  font-size: 19px;
+  padding: 19px 75px;
   color: #5f778a;
 }
 .panel {
   background-color: white;
-  height: 600px;
+  height: 693px;
 }
 .Tag-left {
   float: left;
