--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
   scroll-behavior: smooth;
 }
 
-/* ----------------------------------------------------------- is start -section-1 ---------------------------------------- --
+/* ----------------------------------------------------------- is start-section-1 ---------------------------------------- --
 ------------------------------------------------------------------------------------------------------------------------------- */
 .cont {
   width: 1072px;
@@ -61,8 +61,10 @@ html {
 }
 .navbar-1 a {
   text-decoration: none;
-
   color: white;
+}
+a:hover {
+  color: #9aa4a7;
 }
 .navbar-1 li::before {
   content: "";
@@ -70,9 +72,15 @@ html {
   left: -36px;
   top: 20%;
   transform: translate(-50%);
-  height: 53%;
+  height: 61%;
   border-left: 2px solid #ffffff;
 }
+.navbar-1 li:first-child::before{
+  border-left: none;
+}
+
+/* <!-------------------- Header- Hero section -------------
+-----------------------------------------------------------> */
 
 .Tag {
   padding: 96px 0;
@@ -307,7 +315,7 @@ th {
 .icons-3 {
   display: flex;
   justify-content: center;
-  gap: 33px;
+  gap: 27px;
   margin: 31px;
 }
 .footer-p {
@@ -317,13 +325,29 @@ th {
   font-size: 12px;
 }
 
+/*--------------------------------------------- Responsive website Layout start ---------------------------------------------------
+---------------------------------------------------------------------------------------------------------------------------*/
 
+/* --------mobile devices -----------*/
 
-
-
-
-
-
-
-@media screen {
+@media (max-width: 770px) {
+  .cont {
+    width: 259vw;
+  }
+  .header-top {
+    display: flex;
+    align-items: center;
+  }
+  .navbar {
+    width: 100%;
+    height: 770px;
+  }
+  .navbar-1 {
+    display: flex;
+    text-align: center;
+  }
+  .navbar-1 ul {
+    margin: 25px;
+    width: 10%;
+  }
 }
